Fixed css of carousel images listed on home page. Also added filter to truncate text

--- a/control/content/css/content.app.css
+++ b/control/content/css/content.app.css
@@ -215,17 +215,11 @@ top: 8px;
 }
 
 .word-wrap {
-    line-height: 1.2em;
+    line-height: 40px;
     top: 0 !important;
-    word-wrap: break-word;
-    width: 44% !important; /* Use whatever width you want */
-    display:  -webkit-inline-box !important;
-    display:  -moz-box !important;
-    white-space: normal !important;
-    -webkit-line-clamp:2;
-    -moz-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    -moz-box-orient: vertical;
+    width: 40% !important;
+    white-space: nowrap !important;
+    margin-left: 5px;
 }
 
 .carousel-item-btns{
@@ -234,4 +228,16 @@ top: 8px;
 }
 .clear-both{
     clear: both;
+}
+
+.img-carousel-thumb{
+    display: block;
+    float: left;
+    text-align: center;
+    width: 80px;
+    height: 40px;
+}
+
+.img-carousel-thumb > img{
+    max-height: 38px !important;
 }
